Fix environment logs layout broken when displaying long binary body
Closes #335

--- a/src/app/components/environment-logs.component.scss
+++ b/src/app/components/environment-logs.component.scss
@@ -20,7 +20,7 @@ $logs-border: 1px solid lighten($gray-900, 1%);
   }
 
   &-content {
-    word-break: break-all;
+    overflow-wrap: anywhere;
 
     &-container {
       overflow-y: auto;
